manifests/files/puppet/sysconfig/iptables
# ZYV: Manually tweaked firewall configuration for Anubis

# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.

*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Jenkins
-A PREROUTING -p tcp -d 132.230.177.10 --dport 80 -j DNAT --to-destination 192.168.122.101:8080

COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

#
# Infrastructure services
#
-A INPUT -i virbr0 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 8140 -j ACCEPT

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited

# Jenkins
-A FORWARD -d 192.168.122.101/32 -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT

-A FORWARD -j REJECT --reject-with icmp-host-prohibited

COMMIT
